# rust-toys

./: Cargo.toml  README.md
.devcontainer/: Dockerfile
cip/: Cargo.toml  README.md
cip/src/: main.rs
linear_algebra/: Cargo.toml
src/linear_algebra/: matrix.rs
