[package]
authors = ["hyuuko <751533978@qq.com>"]
description = "An extension for cargo install"
edition = "2018"
name = "cip"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
reqwest = {version = "0.10", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = {version = "0.2", features = ["full"]}
